--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,25 @@ img {
   border: 1px solid transparent;
   flex-basis: calc(100% / 3 - 20px);
 }
+
+#counter {
+  margin-top: 35px;
+  margin-bottom: 50px;
+  margin-left: 35px;
+}
+
+#validation-input {
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
